# freewill

./: inspect_metadata.py  pyproject.toml
docs/: reference.md  walkthrough.md
notebooks/: exploration.ipynb
notebooks/.ipynb_checkpoints/: exploration-checkpoint.ipynb
src/freewill/: dataset.py  explore.py  transforms.py
tests/: test_dataset_jax.py  test_dataset_manual.py
