[project]
name = "freewill"
version = "0.1.0"
description = ""
authors = [
    {name = "Midhun",email = "midhungecster@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "mne (>=1.10.2,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "jax (>=0.8.1,<0.9.0)",
    "jaxlib (>=0.8.1,<0.9.0)",
    "diffrax (>=0.7.0,<0.8.0)",
    "equinox (>=0.13.2,<0.14.0)",
    "torch (>=2.9.1,<3.0.0)",
    "braindecode (>=1.2.0,<2.0.0)",
    "skorch (>=1.3.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "freewill", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
